*SVN*

* Refactor sanitizer helpers into HTML classes and make it easy to swap them out with custom implementations.  Closes #10129.  [rick]

* Add deprecation for old subtemplate syntax for ActionMailer templates, use render :partial [rick]

* Fix TemplateError so it doesn't bomb on exceptions while running tests [rick]

* Fixed that named routes living under resources shouldn't have double slashes #10198 [isaacfeliu]

* Make sure that cookie sessions use a secret that is at least 30 chars in length. [Koz]

* Fixed that partial rendering should look at the type of the first render to determine its own type if no other clues are available (like when using text.plain.erb as the extension in AM) #10130 [java]

* Fixed that has_many :through associations should render as collections too #9051 [mathie/danger]

* Added :mouseover short-cut to AssetTagHelper#image_tag for doing easy image swaps #6893 [joost]

* Fixed handling of non-domain hosts #9479 [purp]

* Fix syntax error in documentation example for cycle method. Closes #8735 [foca]

* Document :with option for link_to_remote. Closes #8765 [ryanb]

* Document :minute_step option for time_select. Closes #8814 [brupm]

* Explain how to use the :href option for link_to_remote to degrade gracefully in the absence of JavaScript. Closes #8911 [vlad]

* Disambiguate :size option for text area tag. Closes #8955 [redbeard]

* Fix broken tag in assert_tag documentation. Closes #9037 [mfazekas]

* Add documentation for route conditions. Closes #9041 [innu, manfred]

* Fix typo left over from previous typo fix in url helper. Closes #9414 [Henrik N]

* Fixed that ActionController::CgiRequest#host_with_port() should handle standard port #10082 [moro]

* Update Prototype to 1.6.0 and script.aculo.us to 1.8.0.  [sam, madrobby]

* Expose the cookie jar as a helper method (before the view would just get the raw cookie hash) [DHH]

* Integration tests: get_ and post_via_redirect take a headers hash.  #9130 [simonjefford]
