@@ -1,5 +1,7 @@
 *SVN*
 
+* Add #prepend_view_path and #append_view_path instance methods on ActionController::Base for consistency with the class methods.  [rick]
+
 * Refactor sanitizer helpers into HTML classes and make it easy to swap them out with custom implementations.  Closes #10129.  [rick]
 
 * Add deprecation for old subtemplate syntax for ActionMailer templates, use render :partial [rick]
